# License-Manager

./: CMakeLists.txt  README.md
demo-keys/: private-key.h  public-key.h
src/tools/: CMakeLists.txt  LicenseComm.hpp  connection.hpp
src/tools/base_lib/: CMakeLists.txt
src/tools/base_lib/linux/: Crypto.cpp  Crypto.h  CryptoHelperLinux.cpp  base64.cpp  base64.h
src/tools/boost_openssl/: CMakeLists.txt  Session.cpp  Session.h  Ssl_Client.cpp  Ssl_Client.h  Ssl_Server.cpp  Ssl_Server.h
src/tools/bootstrap/: CMakeLists.txt  bootstrap.cpp  bootstrap.h
src/tools/license-client/: CMakeLists.txt  license-client.cpp
src/tools/license-generator/: license-generator.h
src/tools/license-manager/: CMakeLists.txt  ProductManager.cpp  ProductManager.h  license-generator.cpp  license-generator.h  license-manager-main.cpp  product-manager-main.cpp
test/scratch/: pc-identifiers.c
